--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "scss": "node-sass --watch ./src/styles/scss -o ./src/styles/css"
   },
   "eslintConfig": {
     "extends": [
