--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mongodb": "^4.3.0",
     "mongoose": "^5.11.10",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.4.1"
   }
 }
