--- a/package.json
+++ b/package.json
@@ -10,18 +10,13 @@
     "axios": "^0.24.0",
     "firebase": "^9.6.2",
     "node-sass": "^7.0.1",
-    "pusher": "^5.0.0",
-    "pusher-js": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
+    "react-icons": "^4.3.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "realm-web": "^1.5.1",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
